--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "google-auth-library": "^10.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "openai": "^5.10.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
