--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.11.0",
-    "framer-motion": "^12.23.9",
+    "framer-motion": "^12.23.22",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.526.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.7.0"
+    "react-router-dom": "^7.7.0",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
