--- a/rasa-bot/data/rules.yml
+++ b/rasa-bot/data/rules.yml
@@ -1,13 +1,17 @@
 version: "3.1"
 
 rules:
+  - rule: Greet
+    steps:
+      - intent: greet
+      - action: utter_greet
 
-- rule: Say goodbye anytime the user says goodbye
-  steps:
-  - intent: goodbye
-  - action: utter_goodbye
+  - rule: Goodbye
+    steps:
+      - intent: goodbye
+      - action: utter_goodbye
 
-- rule: Say 'I am a bot' anytime the user challenges
-  steps:
-  - intent: bot_challenge
-  - action: utter_iamabot
+  - rule: Handle ask_ollama
+    steps:
+      - intent: ask_ollama
+      - action: action_query_ollama
