--- a/rasa-bot/data/stories.yml
+++ b/rasa-bot/data/stories.yml
@@ -1,30 +1,7 @@
 version: "3.1"
-
 stories:
-
-- story: happy path
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_great
-  - action: utter_happy
-
-- story: sad path 1
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: affirm
-  - action: utter_happy
-
-- story: sad path 2
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: deny
-  - action: utter_goodbye
+- story: user asks ollama
+steps:
+- intent: ask_ollama
+- action: action_query_ollama
+- action: utter_ask_clarify
