--- a/rasa-bot/domain.yml
+++ b/rasa-bot/domain.yml
@@ -3,31 +3,26 @@ version: "3.1"
 intents:
   - greet
   - goodbye
+  - ask_ollama
   - affirm
-  - deny
-  - mood_great
-  - mood_unhappy
-  - bot_challenge
 
 responses:
   utter_greet:
-  - text: "Hey! How are you?"
-
-  utter_cheer_up:
-  - text: "Here is something to cheer you up:"
-    image: "https://i.imgur.com/nGF1K8f.jpg"
-
-  utter_did_that_help:
-  - text: "Did that help you?"
-
-  utter_happy:
-  - text: "Great, carry on!"
-
+    - text: "Hey! How can I help?"
   utter_goodbye:
-  - text: "Bye"
+    - text: "Goodbye 👋"
+  utter_ask_clarify:
+    - text: "I didn't understand — can you rephrase?"
 
-  utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
+slots:
+  last_user_message:
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: from_text  # captures raw user message
+
+actions:
+  - action_query_ollama
 
 session_config:
   session_expiration_time: 60
