--- a/rasa-bot/data/rules.yml
+++ b/rasa-bot/data/rules.yml
@@ -1,17 +1,55 @@
 version: "3.1"
 
 rules:
-  - rule: Greet
-    steps:
-      - intent: greet
-      - action: utter_greet
 
-  - rule: Goodbye
-    steps:
-      - intent: goodbye
-      - action: utter_goodbye
+# Basic greetings & farewell
+- rule: Respond to greetings
+  steps:
+    - intent: greet
+    - action: utter_greet
 
-  - rule: Handle ask_ollama
-    steps:
-      - intent: ask_ollama
-      - action: action_query_ollama
+- rule: Respond to goodbye
+  steps:
+    - intent: goodbye
+    - action: utter_goodbye
+
+- rule: Respond to thank you
+  steps:
+    - intent: thankyou
+    - action: utter_thankyou
+
+# Show total income
+- rule: Show total income
+  steps:
+    - intent: check_income
+    - action: action_check_income
+
+# Show total expense
+- rule: Show total expense
+  steps:
+    - intent: check_expense
+    - action: action_check_expense
+
+# Show balance
+- rule: Show balance
+  steps:
+    - intent: check_balance
+    - action: action_check_balance
+
+# Add a new transaction (redirect handled by custom action)
+- rule: Add a new transaction
+  steps:
+    - intent: add_transaction
+    - action: action_add_transaction
+
+# Provide financial suggestion
+- rule: Provide financial suggestion
+  steps:
+    - intent: get_suggestion
+    - action: action_get_suggestion
+
+# Fallback
+- rule: Default fallback
+  steps:
+    - intent: nlu_fallback
+    - action: utter_default
