--- a/rasa-bot/data/stories.yml
+++ b/rasa-bot/data/stories.yml
@@ -1,7 +1,55 @@
 version: "3.1"
-stories:
-- story: user asks ollama
-steps:
-- intent: ask_ollama
-- action: action_query_ollama
-- action: utter_ask_clarify
+
+rules:
+
+# Basic greetings & farewell
+- rule: Respond to greetings
+  steps:
+    - intent: greet
+    - action: utter_greet
+
+- rule: Respond to goodbye
+  steps:
+    - intent: goodbye
+    - action: utter_goodbye
+
+- rule: Respond to thank you
+  steps:
+    - intent: thankyou
+    - action: utter_thankyou
+
+# Show total income
+- rule: Show total income
+  steps:
+    - intent: check_income
+    - action: action_check_income
+
+# Show total expense
+- rule: Show total expense
+  steps:
+    - intent: check_expense
+    - action: action_check_expense
+
+# Show balance
+- rule: Show balance
+  steps:
+    - intent: check_balance
+    - action: action_check_balance
+
+# Add a new transaction (redirect handled by custom action)
+- rule: Add a new transaction
+  steps:
+    - intent: add_transaction
+    - action: action_add_transaction
+
+# Provide financial suggestion
+- rule: Provide financial suggestion
+  steps:
+    - intent: get_suggestion
+    - action: action_get_suggestion
+
+# Fallback
+- rule: Default fallback
+  steps:
+    - intent: nlu_fallback
+    - action: utter_default
