--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,12 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "google-auth-library": "^10.2.0",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
     "nodemailer": "^7.0.5",
-    "openai": "^5.10.2"
+    "openai": "^5.10.2",
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
