--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "google-auth-library": "^10.2.0",
     "json2csv": "^6.0.0-alpha.2",
