--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -27,6 +27,9 @@
     "openai": "^5.10.2",
     "pdfkit": "^0.17.2"
   },
+  "engines": {
+  "node": "20.x"
+},
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
